# UNLP-Informatica

./: README.md
PRIMERO/: .gitignore
SEGUNDO/sem1_2024/RUST/: .gitignore  Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA1/ej1_1/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA1/ej1_10/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA1/ej1_11/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA1/ej1_12/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA1/ej1_2/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA1/ej1_3/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA1/ej1_4/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA1/ej1_5/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA1/ej1_6/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA1/ej1_7/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA1/ej1_8/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA1/ej1_9/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA2/ej2_1/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA2/ej2_10/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA2/ej2_11/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA2/ej2_12/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA2/ej2_13/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA2/ej2_14/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA2/ej2_2/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA2/ej2_3/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA2/ej2_4/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA2/ej2_5/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA2/ej2_6/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA2/ej2_7/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA2/ej2_8/: Cargo.toml
SEGUNDO/sem1_2024/RUST/PRACTICA2/ej2_9/: Cargo.toml
(+1007 files in other folders)
