[workspace]
resolver = "2"
members = ["PRACTICA3/ej3_1","PRACTICA3/ej3_2","PRACTICA3/ej3_3","PRACTICA3/ej3_4","PRACTICA3/ej3_5","PRACTICA3/ej3_6","PRACTICA3/ej3_7","PRACTICA3/ej3_8","PRACTICA3/ej3_9","PRACTICA3/ej3_10","PRACTICA1/ej1_1", "PRACTICA1/ej1_10", "PRACTICA1/ej1_11", "PRACTICA1/ej1_12", "PRACTICA1/ej1_2", "PRACTICA1/ej1_3", "PRACTICA1/ej1_4", "PRACTICA1/ej1_5", "PRACTICA1/ej1_6", "PRACTICA1/ej1_7", "PRACTICA1/ej1_8", "PRACTICA1/ej1_9", "PRACTICA2/ej2_1", "PRACTICA2/ej2_10", "PRACTICA2/ej2_11", "PRACTICA2/ej2_12", "PRACTICA2/ej2_13", "PRACTICA2/ej2_14", "PRACTICA2/ej2_2", "PRACTICA2/ej2_3", "PRACTICA2/ej2_4", "PRACTICA2/ej2_5", "PRACTICA2/ej2_6", "PRACTICA2/ej2_7", "PRACTICA2/ej2_8", "PRACTICA2/ej2_9", "PRACTICA4/ej4_1", "PRACTICA4/ej4_3", "PRACTICA4/ej4_4", "PRACTICA4/ej4_5", "PRACTICA4/ej4_2", "PRACTICA5/ej5_1", "PRACTICA5/ej5_2", "PRACTICA5/ej5_3", "PRACTICA5/ej5_4", "PRACTICA5/ej5_5", "PRACTICA5/ej5_6"]
